add images. change styles.css change about.html

--- a/about.html
+++ b/about.html
@@ -25,18 +25,30 @@
                 <p><strong>Nom et Prénom :</strong> Guijarro Gabriela</p>
                 <p><strong>Âge :</strong> 32 ans</p>
 
-                <h3>Mes plats préférés</h3>
+                <h3>Mes Plats Préférés</h3>
                 <ul>
-                    <li>Pizza</li>
-                    <li>Sushi</li>
-                    <li>Pâtes carbonara</li>
+                    <li>
+                        <img src="images/pates.jpeg" alt="Pâtes" class="plat-logo"> Pâtes
+                    </li>
+                    <li>
+                        <img src="images/sushi.jpeg" alt="Sushis" class="plat-logo"> Sushis
+                    </li>
+                    <li>
+                        <img src="images/pizza.png" alt="Pizza" class="plat-logo"> Pizza
+                    </li>
                 </ul>
 
-                <h3>Mes hobbies</h3>
+                <h3>Mes Hobbies</h3>
                 <ul>
-                    <li>Lire des livres</li>
-                    <li>Faire du sport</li>
-                    <li>Voyager</li>
+                    <li>
+                        <img src="images/voyage.png" alt="Voyage" class="hobby-logo"> Voyage
+                    </li>
+                    <li>
+                        <img src="images/courir.png" alt="Courir" class="hobby-logo"> Courir
+                    </li>
+                    <li>
+                        <img src="images/livre.png" alt="Lire" class="hobby-logo"> Lire
+                    </li>
                 </ul>
             </div>
         </section>
