--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,27 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Formulaire de contact -->
+    <section id="contact-form">
+        <h1>Contactez-nous</h1>
+        <form action="envoyer_message.php" method="post">
+            <label for="name">Nom</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="subject">Sujet</label>
+            <input type="text" id="subject" name="subject" required>
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">Envoyer</button>
+        </form>
+    </section>
+
     <footer>
         <p>&copy; 2025 Gabriela.</p>
     </footer>
