--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
     <main>
         <section class="profile-card">
-            <img src="https://avataaars.io/?avatarStyle=Circle&topType=LongHairStraight&accessoriesType=Blank&hairColor=BrownDark&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light" alt="Avatar" class="avatar">
+            <img src="images/gabriela.jpg" alt="Gabriela" class="avatar">
             
             <div class="profile-info">
                 <p><strong>Nom et Prénom :</strong> Guijarro Gabriela</p>
